--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "leaflet": "^1.9.4",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.16.3",
     "postcss": "8.4.25",
     "prisma": "^4.16.2",
     "query-string": "^8.1.0",
@@ -28,12 +31,16 @@
     "react-hook-form": "^7.45.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
+    "world-countries": "^4.0.0",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "autoprefixer": "^10.4.14"
   }
 }
